# FreeBot

./: CMakeLists.txt  README.md  prj.conf
boards/arm/freebot-nrf52840/: Kconfig.board  Kconfig.defconfig  README.rst  freebot-nrf52840.dts  freebot-nrf52840.yaml  freebot-nrf52840_defconfig
boards/arm/freebot-nrf52840/dts/bindings/: nes,freebot-motors.yaml  nes,freebot-powermanagement.yaml
central_uart/: prj.conf
central_uart/src/: main.c
lib/freebot/inc/: fb_err.h  fb_io.h  fb_motor.h  fb_pwr.h  freebot.h
lib/freebot/src/: fb_dummy.c  fb_io.c  fb_motor.c  fb_pwr.c
lib/sct/inc/: generic_mic.h  sct_work_and_charge.h
lib/sct/src/: generic_mic.c  sct_work_and_charge.c
old files/: main_new.c  main_old.c  my_fbs.h
old_files/: 30_7_24.c
peripheral_uart/: prj.conf
peripheral_uart/src/: main.c
python/: controller.yaml  main.py  simple_serial_send.py  support_FreeBot.py  support_FreeBot.tcl  support_FreeBot_support.py  test.py
src/: energy_sharing.c  main.c  main_uart.c  my_fbs.c
